[package]
name = "druid-lens-compose"
version = "0.1.0"
authors = ["Richard Dodd <richard.o.dodd@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.51", features = ["full" ]}
quote = "1.0.7"
proc-macro2 = "1.0.24"
